<resources>
    <string name="app_name">Beervana</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="registracija">Registracija</string>
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="broj_mobitela">Broj mobitela</string>
    <string name="e_mail">E-mail</string>
    <string name="korisnicko_ime">Korisničko ime</string>
    <string name="lozinka">Lozinka</string>
    <string name="ponovite_lozinku">Ponovite lozinku</string>
    <string name="registriraj_se">Registriraj se</string>
    <string name="odaberite_ulogu">Odaberite Ulogu</string>
    <string name="naziv_lokacije">Naziv lokacije</string>
    <string name="opis_lokacije">Opis Lokacije</string>
    <string name="grad">Grad</string>
    <string name="ulica">Ulica</string>
    <string name="kucni_broj">Kućni broj</string>
    <string name="oib_lokacije">OIB lokacije</string>
    <string name="add_event">Add Event</string>
    <string name="event_name">Event name</string>
    <string name="slika_za_doga_aj">Slika za događaj</string>
    <string name="add_image">Add Image</string>
    <string name="description">Description</string>
    <string name="datumTekst">   / /   </string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="add_tasting_menu">Add tasting menu</string>
    <string name="imageTastingMenu">Add Image</string>
    <string name="tastingMenuName">Menu name</string>
    <string name="odaberite_pivu">Choose beer</string>
    <string name="tastingMenuDuration">Duration in days</string>
    <string name="menuNameMismatch">Wrong menu name</string>
    <string name="menuDurationMismatch">Please enter the date.</string>
    <string name="menuBeerPickError">At least one beer must be selected</string>
    <string name="tastingMenuDescription">Tasting menu description</string>
    <string-array name="ListaUloga">
        <item>Odaberite Ulogu</item>
        <item>Korisnik</item>
        <item>Klijent</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_beerplace_homepage_new">BeerplaceHomepageActivityNew</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_single_review">SingleReviewActivity</string>
    <string name="add_review_button">add review</string>
    <string name="see_all_beer_reviews">see all</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="date_Aevent">Date</string>
    <string name="vrijem_event">:</string>
    <string name="time_gumb">Time</string>
    <string name="add_event_button">Add Event</string>
    <string name="piva_text_BP">Piva</string>
    <string name="pogledajte_sva_piva_u_na_oj_ponudi">Pogledajte sva piva u našoj ponudi!</string>
    <string name="doga_aji_BP">Događaji</string>
    <string name="doga_anja_na_na_oj_lokaciji">Događanja na našoj lokaciji</string>
    <string name="degustacijski_meniji_BP">Degustacijski meniji</string>
    <string name="isprobajte_sve">Isprobajte sve!</string>
    <string name="recenzije_BP">Recenzije</string>
    <string name="to_drugi_misle_o_nama">Što drugi misle o nama...</string>
    <string name="lokacija_na_mapi_BP">Lokacija na mapi</string>
    <string name="_0_0">0.0</string>
    <string name="napi_i_recenziju_BP">Napiši recenziju</string>
    <string name="promocije_BP">Promocije</string>
    <string name="iskoristite_na_e_promocije">Iskoristite naše promocije</string>
    <string name="textview">TextView</string>
    <string name="tap_to_see_all">Tap to see all</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="recent_ratings_on_my_location">Recent ratings on my location</string>
    <string name="recent_ratings_on_my_beers">Recent ratings on my beers</string>
    <string name="my_statistics">My statistics</string>
    <string name="my_catalogue">My catalogue</string>
    <string name="beers_GC">Beers</string>
    <string name="tasting_menu_GC">Tasting menu</string>
    <string name="promos_GC">Promos</string>
    <string name="events_GC">Events</string>
    <string name="add_new_item">Add new item</string>
    <string name="plus_IZD">+</string>
    <string name="add_promo_IZD">Add Promo</string>
    <string name="add_beer_IZD">Add Beer</string>
    <string name="add_tasting_menu_IZD">Add Tasting menu</string>
    <string name="add_event_IZD">Add Event</string>
    <string name="todo">TODO</string>
    <string name="username_MA">Username</string>
    <string name="password_MA">Password</string>
    <string name="login_MA">login</string>
    <string name="not_a_user">Not a user?</string>
    <string name="sign_up_MA">Sign up</string>
    <string name="location_K">Location</string>
    <string name="you_can_find_us_at">You can find us at:</string>
    <string name="subscription_PAY">Subscription</string>
    <string name="pay_PAY">Pay</string>
    <string name="subscription_status_PAY">Subscription status:</string>
    <string name="about_IOA">About</string>
    <string name="beervana_is_a_project_that_we_want_to_introduce_ourselves_to_the_market_for_implementation_of_applications_and_their_maintenance_the_purpose_of_the_application_is_to_enable_the_user_to_find_new_crafts_beers_and_cafes_where_they_are_sold_the_application_is_intended_for_use_by_ordinary_people_or_brewers">Beervana is a project that we want to introduce ourselves to the market for implementation of applications and their maintenance. The purpose of the application is to enable the user to find new crafts beers and cafes where they are sold. The application is intended for use by ordinary people or brewers</string>
    <string name="contact_us_IOA">Contact us:</string>
    <string name="_0800_123_123">0800 123 123</string>
    <string name="_385_92_266_6064">+385 92 266 6064</string>
    <string name="naziv_doga_aja_EV">Naziv Događaja</string>
    <string name="opis_doga_aja_EV">Opis događaja</string>
    <string name="datum_od_EV">Datum Od</string>
    <string name="datum_do_EV">Datum Do</string>
    <string name="naziv_lokacije_EV">Naziv Lokacije</string>
    <string name="reviews_POP">Reviews:</string>
    <string name="description_POP">Description</string>
    <string name="alcoholpercentage_POP">AlcoholPercentage</string>
    <string name="beername_POP">BeerName</string>
    <string name="beer_price_POP">Beer price</string>
    <string name="_5_POP">/5</string>
    <string name="locations_Se">Locations:</string>
    <string name="_Se">No locations found for the search term.</string>
    <string name="beers_Se">Beers:</string>
    <string name="no_bears_found_for_the_search_term_Se">No bears found for the search term.</string>
    <string name="settings_Settings">Settings</string>
    <string name="log_out_Settings">Log out</string>
    <string name="about_us_Settings">About us</string>
    <string name="my_statistics_UStatistics">My Statistics</string>
    <string name="password_AUser">Password:</string>
    <string name="change_username_AUser">Change username</string>
    <string name="change_password_AUser">Change password</string>
    <string name="new_username_AUser">New username</string>
    <string name="old_password_AUser">Old password</string>
    <string name="new_password_AUser">New password</string>
    <string name="new_password_again_AUser">New password again</string>
    <string name="beer_name_AddBears">Beer name</string>
    <string name="beer_taste_AddBears">Beer taste</string>
    <string name="beer_quantity_in_litres_AddBears">Beer quantity in litres</string>
    <string name="add_beers_AddBears">Add beers</string>
    <string name="beer_price_AddBears">Beer price</string>
    <string name="pick_AddBears">Pick</string>
    <string name="add_my_review_AddReview">Add my review</string>
    <string name="naziv_CustomBV">Naziv:</string>
    <string name="cijena_CustomBV">Cijena:</string>
    <string name="okus_CustomBV">Okus:</string>
    <string name="naziv_piva_CustomBV">Naziv Piva</string>
    <string name="cijena_piva_CustomBV">Cijena Piva</string>
    <string name="okus_piva_CustomBV">Okus Piva</string>
    <string name="_1_CustomLV">1</string>
    <string name="beer_name_CustomLV">Beer name</string>
    <string name="price_CustomLV">Price</string>
    <string name="naziv_lokacije_CustomLocationView">Naziv lokacije:</string>
    <string name="ocjena_lokacije_CustomLocationView">Ocjena Lokacije:</string>
    <string name="adresa_lokacije_CustomLocationView">Adresa Lokacije:</string>
    <string name="naziv_lokacijee_CustomLocationView">Naziv Lokacije</string>
    <string name="ocjena_lokacije_CustomLocationViewTV">Ocjena Lokacije</string>
    <string name="adresalokacije_CustomLocationView">AdresaLokacije</string>
    <string name="naziv_lokacije_EventCLV">Naziv Lokacije</string>
    <string name="naziv_doga_aja_EventCLV">Naziv Događaja</string>
    <string name="_20_11_2020_23_20_00_EventCLV">20/11/2020 23:20:00</string>
    <string name="_20_11_2020_00_00_00_EventCLV">20/11/2020 00:00:00</string>
    <string name="what_s_new_in_beervana_GU">What\'s new in Beervana</string>
    <string name="tap_to_see_more">Tap to see more</string>
    <string name="beerplace_of_the_month_GU">Beerplace of the month</string>
    <string name="rating_GU">Rating:</string>
    <string name="feed_of_places_based_on_my_location_GU">Feed of places based on my location</string>
    <string name="show_more_locations_GU">Show more locations</string>
    <string name="my_reviews_GU">My reviews</string>
    <string name="my_places_GU">My places</string>
    <string name="my_beers_GU">My beers</string>
    <string name="naslov_IRI">Naslov</string>
    <string name="okus_IRI">Okus</string>
    <string name="litara_IRI">Litara</string>
    <string name="naziv_lokacije_WinodwKarta">Naziv Lokacije</string>
    <string name="_4_WinodwKarta">:4</string>
    <string name="adresa_WinodwKarta">Adresa</string>
    <string name="naslov_Moudul">naslov</string>
    <string name="beer_name_TastingContent">Beer name</string>
    <string name="taste_TastingContent">Taste</string>
    <string name="price_TastingContent">Price</string>
    <string name="search_Tool">Search</string>
    <string name="moji_podaci_UserData">Moji podaci</string>
    <string name="pregledaj_i_izmjeni_svoje_osobne_podatke_UserData">Pregledaj i izmjeni svoje osobne podatke</string>
    <string name="statistike_UserData">Statistike</string>
    <string name="zanimljive_statistike_o_meni_UserData">Zanimljive statistike o meni</string>
</resources>