<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    >
    <ImageView
        android:id="@+id/imgSlikaPrikazDogadaja"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        />
    <TextView
        android:id="@+id/txtNazivLokacije"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imgSlikaPrikazDogadaja"
        android:layout_marginStart="15dp"
        android:text="@string/naziv_lokacije_EventCLV"
        android:textSize="15sp"
        android:layout_marginTop="3dp"
        />
    <TextView
        android:id="@+id/txtNazivDogadaja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imgSlikaPrikazDogadaja"
        android:text="@string/naziv_doga_aja_EventCLV"
        android:layout_below="@id/txtNazivLokacije"
        android:layout_marginStart="15dp"
        android:textSize="15sp"
        android:layout_marginTop="3dp"
        />
    <TextView
        android:id="@+id/txtDatumOd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imgSlikaPrikazDogadaja"
        android:text="@string/_20_11_2020_23_20_00_EventCLV"
        android:layout_below="@id/txtNazivDogadaja"
        android:layout_marginStart="15dp"
        android:textSize="15sp"
        android:layout_marginTop="3dp"
        />
    <TextView
        android:id="@+id/txtDatumDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imgSlikaPrikazDogadaja"
        android:text="@string/_20_11_2020_00_00_00_EventCLV"
        android:layout_below="@id/txtDatumOd"
        android:layout_marginStart="15dp"
        android:textSize="15sp"
        android:layout_marginTop="3dp"
        />

</RelativeLayout>