<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="horizontal"
    android:layout_marginTop="5dp"
    android:padding="8dp">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:id="@+id/thumbnail"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/naziv_pivkana"
            android:text="@string/naslov_IRI"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okus_IRI"
            android:id="@+id/okusi"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/litara"
            android:text="@string/litara_IRI"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            />


    </LinearLayout>
</LinearLayout>