<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:context=".BeerCatalog"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <include
            android:id="@+id/my_toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </include>

        <ImageView
            android:id="@+id/beerImage"
            android:layout_width="207dp"
            android:layout_height="132dp"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:scaleType="centerCrop"
            android:src="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/descriptionTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beerNameTextView1"
            app:layout_constraintVertical_bias="0.072" />


        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginTop="48dp"
            android:src="@color/beervana"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alcoholPercentageTextView" />

        <Button
            android:id="@+id/addReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_review_button"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/beerImage"
            app:layout_constraintTop_toBottomOf="@id/textView19" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="130dp"
            android:layout_height="36dp"
            android:text="@string/reviews_POP"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView24" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="157dp"
            android:layout_height="43dp"
            android:layout_marginTop="68dp"
            android:text="@string/description_POP"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/alcoholPercentageTextView"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addReview" />

        <TextView
            android:id="@+id/alcoholPercentageTextView"
            android:layout_width="158dp"
            android:layout_height="41dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="36dp"
            android:text="@string/alcoholpercentage_POP"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addReview" />

        <TextView
            android:id="@+id/beerNameTextView1"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginTop="56dp"
            android:text="@string/beername_POP"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="104dp"
            android:layout_height="27dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="36dp"
            android:text="@string/beer_price_POP"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/beerImage"
            app:layout_constraintTop_toBottomOf="@+id/noStarTextView" />

        <TextView
            android:id="@+id/noStarTextView"
            android:layout_width="102dp"
            android:layout_height="26dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="36dp"
            android:text="@string/_5_POP"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/beerImage"
            app:layout_constraintTop_toBottomOf="@+id/addToFavorites" />

        <ImageView
            android:id="@+id/addToFavorites"
            android:layout_width="64dp"
            android:layout_height="58dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/beerImage"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/addtofavorites" />
        <TextView
            android:id="@+id/komentar"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:layout_marginTop="30sp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/ocjena"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView24"
         />

        <TextView
            android:id="@+id/ocjena"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:text="@string/textview"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:layout_marginTop="15sp"
            app:layout_constraintEnd_toStartOf="@+id/zvijezda"
            app:layout_constraintTop_toBottomOf="@+id/imageView24"
            app:layout_constraintVertical_bias="0.289" />

        <ImageView
            android:id="@+id/zvijezda"
            android:layout_width="63dp"
            android:layout_height="49dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView24"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15sp"
            app:srcCompat="@drawable/ic_star_icon" />

        <TextView
            android:id="@+id/datum"
            android:layout_width="197dp"
            android:layout_height="29dp"
            android:text="@string/textview"
            android:layout_marginTop="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/komentar" />

        <TextView
            android:id="@+id/komentar2"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:layout_marginTop="30sp"
            android:textColor="@android:color/black"

            app:layout_constraintEnd_toStartOf="@+id/ocjena2"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datum"/>

        <TextView
            android:id="@+id/ocjena2"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:text="@string/textview"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:layout_marginTop="20sp"
            app:layout_constraintEnd_toStartOf="@+id/zvijezda2"
            app:layout_constraintTop_toBottomOf="@+id/datum"
            app:layout_constraintVertical_bias="0.289" />

        <ImageView
            android:id="@+id/zvijezda2"
            android:layout_width="63dp"
            android:layout_height="49dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/datum"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20sp"
            app:srcCompat="@drawable/ic_star_icon" />

        <TextView
            android:id="@+id/datum2"
            android:layout_width="197dp"
            android:layout_height="29dp"
            android:layout_marginTop="30sp"
            android:text="@string/textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/komentar2" />

        <Button
            android:id="@+id/allReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all_beer_reviews"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/datum2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.925"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/divider11"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>